	* Display AIM away messages in the tooltip for buddies when
	  they are away.
	* Re-write of Jabber protocol plugin
	* Massive core/UI splitting.
	* Conversation API changes.
	* SSL support can now be provided by third party plugins.
	* Multiple copies of gaim installed at different locations no
	  longer attempt to load the same, possibly incompatible plugins
	  (Robert McQueen)
	* Zephyr formatting fixes (Arun A Tharuvai)
	* Zephyr can connect to chats (Karsten Huneycutt)
	* Get User Info in MSN and Yahoo now return an error indicating that
	  the information doesn't exist if the profile is empty (parts by
	  Nathan Poznick)
	* Fix sort by idle to behave as it did pre-contact support (David
	  Smock)
	* Chinese (Traditional) translation updated (Ambrose C. Li)

version 0.70 (09/28/2003):
	* Implemented Yahoo's new authentication method (Cerulean Studios)
	* Protocol plugins that have plugin dependencies now load correctly.
	* Perl installs where it's told to a bit more correctly.
	* Robert "Robot101" McQueen cleaned and core/UI split IM
	  image support.
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Portuguese (Portugal) translation updated (Duarte Henriques)

version 0.69 (09/24/2003):
	* Added Contact (aka Person, aka Meta-Contact, aka Buddy Merging, etc)
	  support
	* Added MSN 6 smileys.
	* Added animated smiley support (Ka-Hing Cheung)
	* Added SSL support, compatible with GNUTLS and Mozilla NSS.
	* Added plugin IPC.
	* Added support for gettext 0.12.x.
	* Updated MSN support to the MSN Protocol version 9.
	* Jabber now supports SSL
	* Yahoo now shows people using the java chat client (Tim Ringenbach)
	* Yahoo chat and conference (Tim Ringenbach)
	* Yahoo ignore support (Jesse Farmer (farmerje))
	* Yahoo idle times displayed, long buddy lists work, sms users,
	  and other improvements (Tim Ringenbach)
	* The accounts window now shows offline accounts as greyed out, and
	  online accounts as colored.
	* Fixed the text replacement plugin.